2A/05_Projet_GL/src/test/deca/context/valid/complet/17_reddef_method_object.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class C {

}

class A {
    Object get() {

    }
}

class B extends A {
    C get() {
        
    }
}