2A/05_Projet_GL/src/test/deca/context/invalid/complet/15_type_retour_non_def.deca
// Description :
//     type de retour de get non definie 
// Resultats :
//    ligne 10 : identificateur de type non definie 
// Historique :
//  cree le 16/01/2024

class A {

    B get() {

    }
}